--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
+  },
+  "engines": {
+    "node": "12.18.0",
+    "npm": "6.14.4"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.11",
+    "@angular/cli": "~9.1.8",
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
+    "@angular/compiler-cli": "~9.1.11",
     "@angular/core": "~9.1.11",
     "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.11",
@@ -26,10 +33,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "bootstrap": "^4.5.0",
     "browser-image-resizer": "^2.1.3",
+    "express": "^4.17.1",
     "firebase": "^7.17.1",
     "ngx-toastr": "^13.0.0",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
     "uuid": "^8.3.0",
     "zone.js": "~0.10.2"
   },
